<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SprintAthlete</string>
    <string name="action_settings">Settings</string>
    <string name="back">back</string>
    <string name="reset">reset</string>
    <string name="seconds">seconds</string>
    <string name="acc">acc</string>
    <string name="date">date</string>
    <string name="remove">remove</string>
    <string name="ms">ms</string>
	<string name="Start">Start</string>
    <string name="distance">distance</string>
    <string name="Reset">Reset</string>
    <string name="Result">Result</string>
    
</resources>
