<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
	android:background="#FFFF99"
     >

    
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="#FFFF99"
     >
   
        <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back" />
   	    <Button
        android:id="@+id/dbreset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset" />
    
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
	android:background="#FFFF99"
     >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/seconds" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_weight="1"
        android:text="@string/acc" />
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/ms"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/distance"
        />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_weight="1"
        android:text="@string/date" />
    
    

</LinearLayout>
    
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" 
	android:background="#FFFF99"
    >
    
    <TextView 
    android:id="@+id/seconds"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:layout_weight="1"
        />

	<TextView
    android:id="@+id/acc"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:layout_weight="1"
   />

	<TextView
	android:id="@+id/ms"
	android:layout_width="wrap_content"
	android:layout_height="fill_parent"  
	android:layout_weight="1"
	    />
	
	<TextView 
	    android:id="@+id/remove"
	    android:layout_width="wrap_content"
	    android:layout_height="fill_parent"
	    android:layout_weight="1"
	    />
	
	<TextView 
    android:id="@+id/date"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    />
	
    
</LinearLayout>



</LinearLayout>
